<resources>
    <string name="app_name">geogame</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_username">Username must be at least 4 characters of letters and/or numbers</string>
    <string name="invalid_password">Password must be at least 8 characters of letters and/or numbers</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile">Profile</string>
    <string name="leader_nboards">Leader\nBoards</string>
    <string name="game_nhistory">Game\nHistory</string>
    <string name="play_a_game">Play a Game</string>
    <string name="create_a_challenge">Create a Challenge</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="submit_guess">Submit Guess</string>
    <string name="earth">Earth</string>
    <string name="submit_challenge">Submit Challenge</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="enter_email">Enter email address</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="creating_account">Creating Account…</string>
    <string name="choose_location">Choose Location</string>
    <string name="submit">Submit</string>
    <string name="make_guess">Make Guess</string>

    =======
>>>>>>> 2d28074cb159c368475c71b393ad5cea772e9fa4
</resources>
